<resources>
    <string name="app_name">My Doctor</string>

    <string name="label_get_started">Konsultasi dengandokter jadi lebih mudah dan fleksibel</string>
    <string name="label_button_get_started">Get Started</string>
    <string name="label_button_sign_in">Sign In</string>

    <string name="label_sign_masuk">Masuk dan mulai\nberkonsultasi</string>
    <string name="label_create_account">Create New Account</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot My Password</string>
    <string name="content_description_my_doctor">Icon My Doctor</string>


</resources>