<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_started"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMyDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_40"
        android:src="@drawable/ic_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_90"
        android:paddingStart="@dimen/spacing_40"
        android:paddingEnd="@dimen/spacing_85"
        android:text="@string/label_get_started"
        android:textColor="@color/white"
        android:textSize="@dimen/font_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMyDoctor" />

    <Button
        android:id="@+id/bGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/my_doctor_green"
        android:text="@string/label_button_get_started"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:layout_marginBottom="@dimen/spacing_16"
        app:layout_constraintBottom_toTopOf="@id/bSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/label_button_sign_in"
        android:textColor="@color/text_black"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:layout_marginBottom="@dimen/spacing_44"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>